Remove obsolete '-XX:MaxPermSize' option from JVM command lines
This makes test VMs no longer start on non-ancient JREs.

Signed-off-by: Alexander Kriegisch <Alexander@Kriegisch.name>