@@ -24,12 +24,12 @@
 					<useUIHarness>true</useUIHarness>
 					<forkedProcessTimeoutInSeconds>7200</forkedProcessTimeoutInSeconds>
 					<showEclipseLog>true</showEclipseLog>
-					<argLine>-Xmx1024m -XX:MaxPermSize=256m ${tycho.surefire.extra.vmargs}</argLine>
-					
+					<argLine>-Xmx1024m ${tycho.surefire.extra.vmargs}</argLine>
+
 					<testClass>org.eclipse.contribution.weaving.jdt.tests.AllWeavingTests</testClass>
 
 					<testFailureIgnore>true</testFailureIgnore>
-					
+
 					<dependencies>
 						<dependency>
 							<type>p2-installable-unit</type>
